# internal/api/openapi.vohive.yaml
@@ -2023,6 +2023,8 @@ components:
           type: integer
         public_ip:
           type: string
+        public_ipv6:
+          type: string
         healthy:
           type: boolean
         operator:
@@ -2116,6 +2118,8 @@ components:
         ims_status:
           type: integer
         public_ip:
+          type: string
+        public_ipv6:
           type: string
         interface:
           type: string
@@ -2552,6 +2556,8 @@ components:
           type: boolean
         public_ip:
           type: string
+        public_ipv6:
+          type: string
         interface:
           type: string
         esim_transport:
@@ -2587,7 +2593,11 @@ components:
           type: boolean
         private_ip:
           type: string
+        private_ipv6:
+          type: string
         public_ip:
+          type: string
+        public_ipv6:
           type: string
         interface:
           type: string
@@ -2785,7 +2795,11 @@ components:
           type: boolean
         private_ip:
           type: string
+        private_ipv6:
+          type: string
         public_ip:
+          type: string
+        public_ipv6:
           type: string
 
     ProxyInstanceDTO:
